rails-6-0-3-security-vulnerabilities: Add case of "[CVE-2020-8162] Circumvention of file size limits in ActiveStorage"

--- a/rails-6-0-3-security-vulnerabilities/Gemfile
+++ b/rails-6-0-3-security-vulnerabilities/Gemfile
@@ -56,3 +56,6 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 # redis store
 gem 'redis'
 gem 'redis-rails'
+
+# active strage
+gem "aws-sdk-s3", require: false
