--- a/rails-6-0-3-security-vulnerabilities/docker-compose.yml
+++ b/rails-6-0-3-security-vulnerabilities/docker-compose.yml
@@ -48,6 +48,10 @@ services:
       DB_PASSWORD: ''
       REDIS_HOST: redis
       REDIS_PORT: 6379
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+      AWS_REGION: ${AWS_REGION}
+      AWS_S3_BUCKET: ${AWS_S3_BUCKET}
 
 volumes:
   db:
