--- a/rails-6-0-3-security-vulnerabilities/docker-compose.yml
+++ b/rails-6-0-3-security-vulnerabilities/docker-compose.yml
@@ -53,6 +53,17 @@ services:
       AWS_REGION: ${AWS_REGION}
       AWS_S3_BUCKET: ${AWS_S3_BUCKET}
 
+  nginx:
+    image: nginx
+    init: true
+    depends_on:
+      - app
+    volumes:
+      - .:/app
+      - ./Docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - ${DOCKER_HOST_NGINX_PORT:-80}:80
+
 volumes:
   db:
     driver: local
