--- a/rails-6-0-3-security-vulnerabilities/package.json
+++ b/rails-6-0-3-security-vulnerabilities/package.json
@@ -6,7 +6,7 @@
     "@rails/activestorage": "6.0.3",
     "@rails/ujs": "6.0.3",
     "@rails/webpacker": "4.2.2",
-    "crypto-js": "^4.0.0",
+    "jssha": "^3.1.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
